2020-12-13  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.7-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.7-alpha02: Dandasana';git push
	git tag -a 4.9.7-alpha02 -m 'andes; S1D infrastructure';git push --tags

	* Inspect variables for sparse-1D dimensions

2020-12-10  Charlie Zender  <zender@uci.edu>

	* Detect version of Nvidia nvc compiler

	* Built on Cori with Nvidia HPC compilers version 11.1

	* Rename lmt_cln to cln_typ

	* Tidy calendar routines while looking for HFC calendar bug

	* Define OPENMP_TARGET and OPENMP_HOST tokens

2020-12-09  Charlie Zender  <zender@uci.edu>

	* S1D stubs determine file, IDs, and shape of input/output horizontal grid

2020-12-08  Charlie Zender  <zender@uci.edu>

	* Add Andes configuration to ncremap ncclimo, build on andes.olcf.ornl.gov

2020-12-01  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.7-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.7-alpha01: Late to School';git push
	git tag -a 4.9.7-alpha01 -m 'Functionally identical to 4.9.6';git push --tags

2020-11-30  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.6 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.6: Windsor';git push
	git tag -a 4.9.6 -m 'netCDF-4.8.0 compatible; ncclimo mdl_nm=MOSART, var_xtr, cmem nodes, prc_typ; ncremap fix mpi nd_fl bug, msk_in/msk_out fix, nfr n2s rll, UDUNITS2_XML_FILE hints; ncra -N';git push --tags

	* Change rgr structure/prototypes to support fl_hrz as horizontal template file for S1D

2020-11-29  Charlie Zender  <zender@uci.edu>

	* Add skeleton code to nco_s1d.[ch] for gathering dimension, coordinate information

2020-11-28  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.6-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.6-alpha05: Iliza';git push
	git tag -a 4.9.6-alpha05 -m 'ncclimo mdl_nm=MOSART, tpd %g, var_xtr; ncremap vrb_lvl=3; nco_s1d stubs';git push --tags

	* Add nco_s1d.[ch] to Makefile and CMake build-engines

2020-11-27  Charlie Zender  <zender@uci.edu>
